# swinsian-db-rust

./: Cargo.toml  README.md
examples/: list_playlists.rs
src/: database.rs
src/database/: playlist.rs
